# async-scraper

./: README.md  pyproject.toml  run.py
src/async_scraper/: parser_database.py  parser_worker.py  scraper.py  scrapers.py
src/async_scraper/common/: models.py
src/async_scraper/databases/: __init__.py  json.py
src/async_scraper/interfaces/: __init__.py  database.py  parser.py  scraper.py
src/async_scraper/scrapers/: __init__.py  books_to_scrape.py  oxylabs.py
src/async_scraper/scrapers/books_to_scrape/: __init__.py  parsers.py  scraper.py
