[project]
name = "async-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Tautvydas Belgeras",email = "t.belgeras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.11.16,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "click (>=8.1.8,<9.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "anyio (>=4.9.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
